--- a/bomberman.html
+++ b/bomberman.html
@@ -6,6 +6,8 @@
 <head>
     <link rel="stylesheet" type="text/css" href="bomberman.css">
     <script type="text/javascript" src="jquery-2.2.1.min.js"></script>
+    <script src="bomberman.js" type="text/javascript"></script>
+
     <meta charset="UTF-8">
 
     <title>jk</title>
@@ -22,7 +24,6 @@
 <canvas id="canvas" width="450" height="450"></canvas>
 
 <!-- Jquery -->
-<script src="test1.js" type="text/javascript"></script>
 </body>
 </html>
 
