Empty game added

--- a/bomberman.html
+++ b/bomberman.html
@@ -10,11 +10,14 @@
         <title>jk</title>
     </head>
     <body>
-        <div class="game" id="main-background">
+        <div hidden class="empty-game">
             <div class="wall-block block"></div>
             <div class="zombie-block block"></div>
             <div class="bomberman-block block"></div>
             <div class="bomb-block block"></div>
+        </div>
+        <div class="game" id="main-background">
+
         </div>
         <div class="modal">
             <p>Hi <br> You can see a bro ! </p>
