--- a/bomberman.html
+++ b/bomberman.html
@@ -15,9 +15,10 @@
 <body>
 <div id="main-background">
     <div class="wall-block block"></div>
+    <div class="bomb-block block"></div>
     <div class="zombie-block block"></div>
     <div class="bomberman-block block"></div>
-    <div class="bomb-block block"></div>
+    <div class="explosion-block block"></div>
 </div>
 
 <!-- Lets make a simple snake game -->
