--- a/bomberman.html
+++ b/bomberman.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <link rel="stylesheet" type="text/css" href="bomberman.css">
-        <script type="text/javascript" src="jquery-2.2.1.min.js"></script>
-        <script src="bomberman.js" type="text/javascript"></script>
-        <script src="modal.js" type="text/javascript"></script>
-        <meta charset="UTF-8">
-        <title>jk</title>
-    </head>
-    <body>
-        <div hidden class="empty-game">
-            <div class="wall-block block"></div>
-            <div class="bomb-block block"></div>
-            <div class="zombie-block block"></div>
-            <div class="bomberman-block block"></div>
-            <div class="explosion-block block"></div>
-        </div>
-        <div class="game" id="main-background">
+<head>
+    <link rel="stylesheet" type="text/css" href="bomberman.css">
+    <script type="text/javascript" src="jquery-2.2.1.min.js"></script>
+    <script src="bomberman.js" type="text/javascript"></script>
+    <script src="modal.js" type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <title>jk</title>
+</head>
+<body>
+<div hidden class="empty-game">
+    <div class="wall-block block"></div>
+    <div class="bomb-block block"></div>
+    <div class="zombie-block block"></div>
+    <div class="bomberman-block block"></div>
+    <div class="box-block block"></div>
+    <div class="explosion-block block"></div>
+    <div class="item-range-block block"></div>
+    <div class="item-teleport-block block"></div>
+</div>
+<div class="game" id="main-background">
 
-        </div>
-        <div class="modal">
-            <p>Hi <br> You can see a bro ! </p>
-            <button class="start-button">Start </button>
-            <label>
-                Width:
-                <input name="game-width" type="number" value="15">
-            </label>
-            <label>
-                Height:
-                <input name="game-height" type="number" value="15">
-            </label>
-            <label>
-                Zombies:
-                <input name="game-zombies" type="number" value="2">
-            </label>
+</div>
+<div class="modal">
+    <p>Hi <br> You can see a bro ! </p>
+    <button class="start-button">Start</button>
+    <label>
+        Width:
+        <input name="game-width" type="number" value="15">
+    </label>
+    <label>
+        Height:
+        <input name="game-height" type="number" value="15">
+    </label>
+    <label>
+        Zombies:
+        <input name="game-zombies" type="number" value="2">
+    </label>
 
 
+</div>
 
-        </div>
+<!-- Lets make a simple snake game -->
+<canvas id="canvas" width="450" height="450"></canvas>
 
-        <!-- Lets make a simple snake game -->
-        <canvas id="canvas" width="450" height="450"></canvas>
-
-        <!-- Jquery -->
-    </body>
+<!-- Jquery -->
+</body>
 </html>
 
