--- a/bomberman.html
+++ b/bomberman.html
@@ -18,7 +18,9 @@
     <div class="box-block block"></div>
     <div class="explosion-block block"></div>
     <div class="item-range-block block"></div>
-    <div class="item-teleport-block block"></div>
+    <div class="item-spirit-block block"></div>
+    <div class="item-goal-block block"></div>
+    <!--<audio src="" id="explosion-audio"></audio>-->
 </div>
 <div class="game" id="main-background">
 
