--- a/bomberman.html
+++ b/bomberman.html
@@ -20,7 +20,9 @@
     <div class="item-range-block block"></div>
     <div class="item-spirit-block block"></div>
     <div class="item-goal-block block"></div>
-    <!--<audio src="" id="explosion-audio"></audio>-->
+    <audio src="explosion.mp3" id="explosion-audio"></audio>
+    <audio src="bomb.mp3" id="bomb-audio"></audio>
+    <audio src="item.mp3" id="item-audio"></audio>
 </div>
 <div class="game" id="main-background">
 
